--- a/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -39,10 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Eye.cs" />
     <Compile Include="Eyes.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="ItemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Word.cs" />
+    <Compile Include="WordAndEyes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
