--- a/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -43,13 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Eye.cs" />
-    <Compile Include="Eyes.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="ItemTypes.cs" />
+    <Compile Include="Items\Eye.cs" />
+    <Compile Include="Items\Eyes.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\ItemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Word.cs" />
-    <Compile Include="WordAndEyes.cs" />
+    <Compile Include="Items\Word.cs" />
+    <Compile Include="Items\WordAndEyes.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
