--- a/ICAPR-RSVP/ICAPR-RSVP.Test/ICAPR-RSVP.Test.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Test/ICAPR-RSVP.Test.csproj
@@ -18,8 +18,8 @@
     <TestProjectType>UnitTest</TestProjectType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>none</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>pdbonly</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\libs\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
