Added network dispatcher. Trials request works. SIngle trial request is TODO

--- a/ICAPR-RSVP/ICAPR-RSVP.Broker/ICAPR-RSVP.Broker.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Broker/ICAPR-RSVP.Broker.csproj
@@ -55,7 +55,9 @@
   <ItemGroup>
     <Compile Include="Brokers\Broker.cs" />
     <Compile Include="Brokers\BrokerEyeTribeSpritz.cs" />
+    <Compile Include="INetworkDispather.cs" />
     <Compile Include="Network.cs" />
+    <Compile Include="SpritzNetworkDispatcher.cs" />
     <Compile Include="Ports\PortBlocking.cs" />
     <Compile Include="Ports\PortBlockingInputEyeTribe.cs" />
     <Compile Include="Ports\Port.cs" />
