--- a/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -49,8 +49,8 @@
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Items\Word.cs" />
-    <Compile Include="Items\WordAndEyes.cs" />
+    <Compile Include="Items\DisplayItem.cs" />
+    <Compile Include="Items\DisplayItemAndEyes.cs" />
     <Compile Include="Utils\FileManager.cs" />
   </ItemGroup>
   <ItemGroup />
