Dependencies eliminated in network. Configuration added to broker and logs.

--- a/ICAPR-RSVP/ICAPR-RSVP.Broker/ICAPR-RSVP.Broker.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Broker/ICAPR-RSVP.Broker.csproj
@@ -55,9 +55,10 @@
   <ItemGroup>
     <Compile Include="Brokers\Broker.cs" />
     <Compile Include="Brokers\BrokerEyeTribeSpritz.cs" />
-    <Compile Include="INetworkDispather.cs" />
-    <Compile Include="Network.cs" />
-    <Compile Include="SpritzNetworkDispatcher.cs" />
+    <Compile Include="Network\NetworkConstants.cs" />
+    <Compile Include="Network\NetworkDispatcher.cs" />
+    <Compile Include="Network\Network.cs" />
+    <Compile Include="Network\NetworkDispatcherRsvpClient.cs" />
     <Compile Include="Ports\PortBlocking.cs" />
     <Compile Include="Ports\PortBlockingInputEyeTribe.cs" />
     <Compile Include="Ports\Port.cs" />
