--- a/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Items\Eyes.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemTypes.cs" />
+    <Compile Include="Items\Trial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Items\DisplayItem.cs" />
     <Compile Include="Items\DisplayItemAndEyes.cs" />
