Started implementing jlpf like library

--- a/ICAPR-RSVP/ICAPR-RSVP/ICAPR-RSVP.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP/ICAPR-RSVP.csproj
@@ -77,9 +77,9 @@
       <Project>{fcc2a784-508b-42f5-8205-ca97855eab07}</Project>
       <Name>ICAPR-RSVP.Broker</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ICAPR-RSVP.Core\ICAPR-RSVP.Core.csproj">
+    <ProjectReference Include="..\ICAPR-RSVP.Core\ICAPR-RSVP.DataCleaning.csproj">
       <Project>{2d8a6fb2-b942-48a7-9511-1158461b7f0a}</Project>
-      <Name>ICAPR-RSVP.Core</Name>
+      <Name>ICAPR-RSVP.DataCleaning</Name>
     </ProjectReference>
     <ProjectReference Include="..\ICAPR-RSVP.Misc\ICAPR-RSVP.Misc.csproj">
       <Project>{2bcf60dd-d05c-4f07-b372-e1e2b5477cfc}</Project>
