--- a/ICAPR-RSVP/ICAPR-RSVP.Core/ICAPR-RSVP.DataCleaning.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Core/ICAPR-RSVP.DataCleaning.csproj
@@ -41,7 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core.cs" />
+    <Compile Include="Filter.cs" />
+    <Compile Include="FilterComposite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
