Integrated with EyeTribe server and calibration process. Made server not to need to restart every time.

--- a/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-RSVP/ICAPR-RSVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
+    <Compile Include="Items\EndOfTrial.cs" />
     <Compile Include="Items\ExperimentConfig.cs" />
     <Compile Include="Items\Eye.cs" />
     <Compile Include="Items\Eyes.cs" />
