--- a/ICAPR-SVP/ICAPR-SVP.Core/ICAPR-RSVP.Core.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Core/ICAPR-RSVP.Core.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2BCF60DD-D05C-4F07-B372-E1E2B5477CFC}</ProjectGuid>
+    <ProjectGuid>{2D8A6FB2-B942-48A7-9511-1158461B7F0A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ICAPR_SVP.Misc</RootNamespace>
-    <AssemblyName>ICAPR-SVP.Misc</AssemblyName>
+    <RootNamespace>ICAPR_RSVP.Core</RootNamespace>
+    <AssemblyName>ICAPR-RSVP.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,41 +30,30 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\libs\EyeTribe\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="Items\CalibrationItem.cs" />
-    <Compile Include="Items\EndOfTrial.cs" />
-    <Compile Include="Items\ExperimentConfig.cs" />
-    <Compile Include="Items\Eye.cs" />
-    <Compile Include="Items\Eyes.cs" />
-    <Compile Include="Items\Item.cs" />
-    <Compile Include="Items\ItemTypes.cs" />
-    <Compile Include="Items\SummaryItem.cs" />
-    <Compile Include="Items\Trial.cs" />
-    <Compile Include="Ports\Port.cs" />
-    <Compile Include="Ports\PortBlocking.cs" />
-    <Compile Include="Ports\PortBlockingOutput.cs" />
-    <Compile Include="Ports\PortNonBlocking.cs" />
+    <Compile Include="Core.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Items\DisplayItem.cs" />
-    <Compile Include="Items\DisplayItemAndEyes.cs" />
-    <Compile Include="Utils\FileManager.cs" />
-    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ICAPR-RSVP.Broker\ICAPR-RSVP.Broker.csproj">
+      <Project>{fcc2a784-508b-42f5-8205-ca97855eab07}</Project>
+      <Name>ICAPR-RSVP.Broker</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ICAPR-RSVP.Misc\ICAPR-RSVP.Misc.csproj">
+      <Project>{2bcf60dd-d05c-4f07-b372-e1e2b5477cfc}</Project>
+      <Name>ICAPR-RSVP.Misc</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
