--- a/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-RSVP.Misc.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-RSVP.Misc.csproj
@@ -7,14 +7,14 @@
     <ProjectGuid>{2BCF60DD-D05C-4F07-B372-E1E2B5477CFC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ICAPR_SVP.Misc</RootNamespace>
-    <AssemblyName>ICAPR-SVP.Misc</AssemblyName>
+    <RootNamespace>ICAPR_RSVP.Misc</RootNamespace>
+    <AssemblyName>ICAPR-RSVP.Misc</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\libs\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -30,8 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\libs\EyeTribe\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,27 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config.cs" />
-    <Compile Include="Items\CalibrationItem.cs" />
-    <Compile Include="Items\EndOfTrial.cs" />
-    <Compile Include="Items\ExperimentConfig.cs" />
-    <Compile Include="Items\Eye.cs" />
-    <Compile Include="Items\Eyes.cs" />
-    <Compile Include="Items\Item.cs" />
-    <Compile Include="Items\ItemTypes.cs" />
-    <Compile Include="Items\SummaryItem.cs" />
-    <Compile Include="Items\Trial.cs" />
-    <Compile Include="Ports\Port.cs" />
-    <Compile Include="Ports\PortBlocking.cs" />
-    <Compile Include="Ports\PortBlockingOutput.cs" />
-    <Compile Include="Ports\PortNonBlocking.cs" />
+    <Compile Include="Eye.cs" />
+    <Compile Include="Eyes.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Items\DisplayItem.cs" />
-    <Compile Include="Items\DisplayItemAndEyes.cs" />
-    <Compile Include="Utils\FileManager.cs" />
-    <Compile Include="Utils\Utils.cs" />
+    <Compile Include="Word.cs" />
+    <Compile Include="WordAndEyes.cs" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
