--- a/ICAPR-SVP/ICAPR-SVP/ICAPR-SVP.csproj
+++ b/ICAPR-SVP/ICAPR-SVP/ICAPR-SVP.csproj
@@ -50,7 +50,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ICAPR_SVP.Program</StartupObject>
+    <StartupObject>ICAPR_SVP.Testing</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
