--- a/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
@@ -54,8 +54,9 @@
     <Compile Include="Items\Trial.cs" />
     <Compile Include="Ports\Port.cs" />
     <Compile Include="Ports\PortBlocking.cs" />
-    <Compile Include="Ports\PortBlockingOutput.cs" />
+    <Compile Include="Ports\PortBlockingDefaultImpl.cs" />
     <Compile Include="Ports\PortNonBlocking.cs" />
+    <Compile Include="Ports\PortNonBlockingDefaultImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Items\DisplayItem.cs" />
     <Compile Include="Items\DisplayItemAndEyes.cs" />
