Added second filter for outliers

--- a/ICAPR-SVP/ICAPR-SVP.Core/ICAPR-SVP.DataCleaning.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Core/ICAPR-SVP.DataCleaning.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Filters\FilterBlinkDetection.cs" />
     <Compile Include="Filters\Filter.cs" />
     <Compile Include="Filters\FilterComposite.cs" />
+    <Compile Include="Filters\FilterSlopeOutliersDetection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
