--- a/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Items\DisplayItem.cs" />
     <Compile Include="Items\DisplayItemAndEyes.cs" />
     <Compile Include="Utils\FileManager.cs" />
+    <Compile Include="Utils\UtilsMath.cs" />
     <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup />
