--- a/ICAPR-SVP/ICAPR-SVP.Test/ICAPR-SVP.Test.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Test/ICAPR-SVP.Test.csproj
@@ -54,11 +54,13 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CleanerExecutorTest.cs" />
+    <Compile Include="ICAExecutorTest.cs" />
     <Compile Include="MockupImplementations\FilterTest.cs" />
     <Compile Include="MockupImplementations\PortBlockingEyeTribeTest.cs" />
     <Compile Include="MockupImplementations\PortNonBlockingSVPTest.cs" />
     <Compile Include="BrokerEyeTribeSpritzTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilsMathTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ICAPR-SVP.Broker\ICAPR-SVP.Broker.csproj">
@@ -68,6 +70,10 @@
     <ProjectReference Include="..\ICAPR-SVP.DataCleaning\ICAPR-SVP.DataCleaning.csproj">
       <Project>{2d8a6fb2-b942-48a7-9511-1158461b7f0a}</Project>
       <Name>ICAPR-SVP.DataCleaning</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ICAPR-SVP.ICA\ICAPR-SVP.ICA.csproj">
+      <Project>{505f4746-9e49-48ad-a6ac-e0d6ef7ec161}</Project>
+      <Name>ICAPR-SVP.ICA</Name>
     </ProjectReference>
     <ProjectReference Include="..\ICAPR-SVP.Misc\ICAPR-SVP.Misc.csproj">
       <Project>{2bcf60dd-d05c-4f07-b372-e1e2b5477cfc}</Project>
