EyeTribe mockup modified. References fixed in project

--- a/ICAPR-SVP/ICAPR-SVP.ICA/ICAPR-SVP.ICA.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.ICA/ICAPR-SVP.ICA.csproj
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Denoiser.cs" />
     <Compile Include="ICAExecutor.cs" />
+    <Compile Include="IDenoiser.cs" />
+    <Compile Include="MatlabDenoiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
