--- a/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassifierWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
