Modified weka component. Fixed getting label from instance

--- a/ICAPR-SVP/ICAPR-SVP.Test/ICAPR-SVP.Test.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Test/ICAPR-SVP.Test.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MockupImplementations\PortNonBlockingSVPTest.cs" />
     <Compile Include="BrokerEyeTribeSpritzTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MLComponentTests.cs" />
     <Compile Include="UtilsMathTest.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +75,10 @@
     <ProjectReference Include="..\ICAPR-SVP.ICA\ICAPR-SVP.ICA.csproj">
       <Project>{505f4746-9e49-48ad-a6ac-e0d6ef7ec161}</Project>
       <Name>ICAPR-SVP.ICA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ICAPR-SVP.MachineLearning\ICAPR-SVP.MachineLearning.csproj">
+      <Project>{f15c34b6-4bf4-4ddd-b684-bb50e4d0a64e}</Project>
+      <Name>ICAPR-SVP.MachineLearning</Name>
     </ProjectReference>
     <ProjectReference Include="..\ICAPR-SVP.Misc\ICAPR-SVP.Misc.csproj">
       <Project>{2bcf60dd-d05c-4f07-b372-e1e2b5477cfc}</Project>
