--- a/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F15C34B6-4BF4-4DDD-B684-BB50E4D0A64E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ICAPR_SVP.MachineLearning</RootNamespace>
     <AssemblyName>ICAPR-SVP.MachineLearning</AssemblyName>
@@ -32,8 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>
-    </StartupObject>
+    <StartupObject>ICAPR_SVP.MachineLearning.TestProgram</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="IKVM.OpenJDK.Beans">
@@ -128,6 +127,7 @@
     <Compile Include="MLComponent.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestProgram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
