--- a/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.Misc/ICAPR-SVP.Misc.csproj
@@ -35,11 +35,19 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TETControls">
+      <HintPath>..\libs\EyeTribe\TETControls.dll</HintPath>
+    </Reference>
+    <Reference Include="TETCSharpClient, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\EyeTribe\TETCSharpClient.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Calibration\Calibrator.cs" />
@@ -66,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Items\DisplayItem.cs" />
     <Compile Include="Items\DisplayItemAndEyes.cs" />
+    <Compile Include="Utils\EyeTribeManager.cs" />
     <Compile Include="Utils\FileManager.cs" />
     <Compile Include="Utils\UtilsMath.cs" />
     <Compile Include="Utils\Utils.cs" />
