Updated weka component with new attributes. Tested and works

--- a/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
+++ b/ICAPR-SVP/ICAPR-SVP.MachineLearning/ICAPR-SVP.MachineLearning.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F15C34B6-4BF4-4DDD-B684-BB50E4D0A64E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ICAPR_SVP.MachineLearning</RootNamespace>
     <AssemblyName>ICAPR-SVP.MachineLearning</AssemblyName>
@@ -32,7 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>ICAPR_SVP.MachineLearning.TestProgram</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="IKVM.OpenJDK.Beans">
